tests/baselines/reference/parserComputedPropertyName16.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName16.ts(2,3): error TS1164: Computed property names are not allowed in enums.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName16.ts (1 errors) ====
    enum E {
      [e] = 1
      ~~~
!!! error TS1164: Computed property names are not allowed in enums.
    }